[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Accessory/AccessoryOrb.gd" type="Script" id=1]
[ext_resource path="res://Assets/Accessory/AccessoryOrb.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 100.0

[node name="Orb" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="ProjectileSpawn" type="Node2D" parent="."]

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.36

[node name="Range" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 1 )

[node name="Projectiles" type="YSort" parent="."]

[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="area_entered" from="Range" to="." method="_on_attack_range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_attack_range_area_exited"]
